Harvest now button + refactoring

--- a/Languages/English/Keyed/owlchemist.smartfarming.xml
+++ b/Languages/English/Keyed/owlchemist.smartfarming.xml
@@ -1,45 +1,53 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <LanguageData>
-	<SmartFarmingOn>On</SmartFarmingOn>
-	<SmartFarmingOff>Off</SmartFarmingOff>
-	<SmartFarmingSmart>Smart</SmartFarmingSmart>
-	<SmartFarmingForce>Force</SmartFarmingForce>
+	<SmartFarming.Icon.On>On</SmartFarming.Icon.On>
+	<SmartFarming.Icon.On.Desc>Sow the selected plant so long as it is currently the grow season.</SmartFarming.Icon.On.Desc>
+	<SmartFarming.Icon.Off>Off</SmartFarming.Icon.Off>
+	<SmartFarming.Icon.Off.Desc>Do not sow any plants.</SmartFarming.Icon.Off.Desc>
+	<SmartFarming.Icon.Smart>Smart</SmartFarming.Icon.Smart>
+	<SmartFarming.Icon.Smart.Desc>Sow plants so long as its predicted growth will reach the minimum harvest threshold before it is expected to die from cold or toxin.</SmartFarming.Icon.Smart.Desc>
+	<SmartFarming.Icon.Force>Force</SmartFarming.Icon.Force>
+	<SmartFarming.Icon.Force.Desc>Sow plants regardless of grow season status.</SmartFarming.Icon.Force.Desc>
+	<SmartFarming.Icon.HarvestNow>Harvest now</SmartFarming.Icon.HarvestNow>
+	<SmartFarming.Icon.HarvestNow.Desc>Designate all plants in this zone for harvesting, even if they're not fully grown yet.</SmartFarming.Icon.HarvestNow.Desc>
 	
-	<SmartFarmingOnDesc>Sow the selected plant so long as it is currently the grow season.</SmartFarmingOnDesc>
-	<SmartFarmingOffDesc>Do not sow any plants.</SmartFarmingOffDesc>
-	<SmartFarmingSmartDesc>Sow plants so long as its predicted growth will reach the minimum harvest threshold before it is expected to die from the cold.</SmartFarmingSmartDesc>
-	<SmartFarmingForceDesc>Sow plants regardless of grow season status.</SmartFarmingForceDesc>
+	<SmartFarming.Icon.Low>Low</SmartFarming.Icon.Low>
+	<SmartFarming.Icon.Normal>Normal</SmartFarming.Icon.Normal>
+	<SmartFarming.Icon.Preferred>Preferred</SmartFarming.Icon.Preferred>
+	<SmartFarming.Icon.Important>Important</SmartFarming.Icon.Important>
+	<SmartFarming.Icon.Critical>Critical</SmartFarming.Icon.Critical>
+	<SmartFarming.Icon.Priority.Desc>Pawns are encouraged to sow and harvest plants in order of priority.</SmartFarming.Icon.Priority.Desc>
 	
-	<SmartFarm_SmartSowLabel>Smart sow:</SmartFarm_SmartSowLabel>
-	<SmartFarm_ProcessedFoodLabel>Processed food factor:</SmartFarm_ProcessedFoodLabel>
+	<SmartFarming.Icon.NoPettyJobs>No petty jobs</SmartFarming.Icon.NoPettyJobs>
+	<SmartFarming.Icon.NoPettyJobs.Desc>Pawns will not sow new plants to this zone unless there is enough work to do, configured in the settings.</SmartFarming.Icon.NoPettyJobs.Desc>
 	
-	<SmartFarm_UseAverageTemperature>Use average temperature prediction instead of low</SmartFarm_UseAverageTemperature>
-	<SmartFarm_UseAverageTemperatureDesc>When predicting the weather for the Smart Sow feature, use the average temperature for the day instead of the low. Using the average will extend the grow season at the risk of losing some crops.</SmartFarm_UseAverageTemperatureDesc>
+	<SmartFarming.Settings.SmartSowLabel>Smart sow:</SmartFarming.Settings.SmartSowLabel>
+	<SmartFarming.Settings.ProcessedFoodLabel>Processed food factor:</SmartFarming.Settings.ProcessedFoodLabel>
 	
-	<SmartFarm_UseAverageFertility>Use average zone fertility instead of weakest</SmartFarm_UseAverageFertility>
-	<SmartFarm_UseAverageFertilityDesc>When predicting plant growth, use the average zone fertility instead of the zone's weakest fertility.</SmartFarm_UseAverageFertilityDesc>
+	<SmartFarming.Settings.UseAverageTemperature>Use average temperature prediction instead of low</SmartFarming.Settings.UseAverageTemperature>
+	<SmartFarming.Settings.UseAverageTemperature.Desc>When predicting the weather for the Smart Sow feature, use the average temperature for the day instead of the low. Using the average will extend the grow season at the risk of losing some crops.</SmartFarming.Settings.UseAverageTemperature.Desc>
 	
-	<SmartFarm_AutoCutBlighted>Automatically designate blighted crops for disposal</SmartFarm_AutoCutBlighted>
-	<SmartFarm_AutoCutBlightedDesc>If a crop becomes blighted, a cut work order will automatically be designated.</SmartFarm_AutoCutBlightedDesc>
+	<SmartFarming.Settings.UseAverageFertility>Use average zone fertility instead of weakest</SmartFarming.Settings.UseAverageFertility>
+	<SmartFarming.Settings.UseAverageFertility.Desc>When predicting plant growth, use the average zone fertility instead of the zone's weakest fertility.</SmartFarming.Settings.UseAverageFertility.Desc>
 	
-	<SmartFarm_AutoCutDying>Automatically try to harvest dying crops</SmartFarm_AutoCutDying>
-	<SmartFarm_AutoCutDyingDesc>If a crop dies to the cold, try to automatically harvest any surviving crops before it's too late.</SmartFarm_AutoCutDyingDesc>
+	<SmartFarming.Settings.AutoCutBlighted>Automatically designate blighted crops for disposal</SmartFarming.Settings.AutoCutBlighted>
+	<SmartFarming.Settings.AutoCutBlighted.Desc>If a crop becomes blighted, a cut work order will automatically be designated.</SmartFarming.Settings.AutoCutBlighted.Desc>
 	
-	<SmartFarm_ProcessedFoodDesc>When grow zones give an estimated potential nutrition yield, it multiplies the raw food's nutrition by this value. For example a Simple Meal multiplies the value by 1.8x.</SmartFarm_ProcessedFoodDesc>
+	<SmartFarming.Settings.AutoCutDying>Automatically try to harvest dying crops</SmartFarming.Settings.AutoCutDying>
+	<SmartFarming.Settings.AutoCutDying.Desc>If a crop dies to the cold, try to automatically harvest any surviving crops before it's too late.</SmartFarming.Settings.AutoCutDying.Desc>
 	
-	<SmartFarm_MinTempSlider>Minimum temperature allowance (Mod default: {0}, Min: {1}, Max: {2}): </SmartFarm_MinTempSlider>
-	<SmartFarm_MinTemp>When predicting the weather of the earliest harvest day, consider anything below this temperature unacceptable. Plants can potentially die at 0C, but can usually survive if it's only barely freezing for a few hours. However, random daily temperatre deviation may reduce accuracy.</SmartFarm_MinTemp>
+	<SmartFarming.Settings.ProcessedFood.Desc>When grow zones give an estimated potential nutrition yield, it multiplies the raw food's nutrition by this value. For example a Simple Meal multiplies the value by 1.8x.</SmartFarming.Settings.ProcessedFood.Desc>
 	
-	<SmartFarm_PettyJobsSlider>Petty jobs margin (Mod default: {0}, Min: {1}, Max: {2}): </SmartFarm_PettyJobsSlider>
-	<SmartFarm_PettyJobs>If "no petty jobs" is enabled on a zone, pawns will not sow a field unless there is at least this percentage of empty tiles to sow. This can be useful for animal grazing zones.</SmartFarm_PettyJobs>
+	<SmartFarming.Settings.MinTempSlider>Minimum temperature allowance (Mod default: {0}, Min: {1}, Max: {2}): </SmartFarming.Settings.MinTempSlider>
+	<SmartFarming.Settings.MinTemp>When predicting the weather of the earliest harvest day, consider anything below this temperature unacceptable. Plants can potentially die at 0C, but can usually survive if it's only barely freezing for a few hours. However, random daily temperatre deviation may reduce accuracy.</SmartFarming.Settings.MinTemp>
 	
-	<SmartFarming_NoPettyJobs>No petty jobs</SmartFarming_NoPettyJobs>
-	<SmartFarming_NoPettyJobsDesc>Pawns will not sow new plants to this zone unless there is enough work to do, configured in the settings.</SmartFarming_NoPettyJobsDesc>
+	<SmartFarming.Settings.PettyJobsSlider>Petty jobs margin (Mod default: {0}, Min: {1}, Max: {2}): </SmartFarming.Settings.PettyJobsSlider>
+	<SmartFarming.Settings.PettyJobs>If "no petty jobs" is enabled on a zone, pawns will not sow a field unless there is at least this percentage of empty tiles to sow. This can be useful for animal grazing zones.</SmartFarming.Settings.PettyJobs>
 	
-	<SmartFarm_MinHarvestDay>\nEarliest harvest day: </SmartFarm_MinHarvestDay>
-	<SmartFarm_MinHarvestDayFail>\nPlants will likely die before harvest</SmartFarm_MinHarvestDayFail>
-	<SmartFarm_Fertility>\nAverage fertility: </SmartFarm_Fertility>
-	<SmartFarm_AverageGrowth>\nAverage growth: </SmartFarm_AverageGrowth>
-	<SmartFarm_Yield>\nPotential nutrition: </SmartFarm_Yield>
-	<SmartFarm_DaysWorth> days worth)</SmartFarm_DaysWorth>
+	<SmartFarming.Inspector.MinHarvestDay>\nEarliest harvest day: </SmartFarming.Inspector.MinHarvestDay>
+	<SmartFarming.Inspector.MinHarvestDayFail>\nPlants will likely die before harvest</SmartFarming.Inspector.MinHarvestDayFail>
+	<SmartFarming.Inspector.Fertility>\nAverage fertility: </SmartFarming.Inspector.Fertility>
+	<SmartFarming.Inspector.AverageGrowth>\nAverage growth: </SmartFarming.Inspector.AverageGrowth>
+	<SmartFarming.Inspector.Yield>\nPotential nutrition: </SmartFarming.Inspector.Yield>
+	<SmartFarming.Inspector.DaysWorth> days worth)</SmartFarming.Inspector.DaysWorth>
 </LanguageData>
