--- a/Languages/English/Keyed/owlchemist.smartfarming.xml
+++ b/Languages/English/Keyed/owlchemist.smartfarming.xml
@@ -10,6 +10,8 @@
 	<SmartFarming.Icon.Force.Desc>Sow plants regardless of grow season status.</SmartFarming.Icon.Force.Desc>
 	<SmartFarming.Icon.HarvestNow>Harvest now</SmartFarming.Icon.HarvestNow>
 	<SmartFarming.Icon.HarvestNow.Desc>Designate all plants in this zone for harvesting, even if they're not fully grown yet.</SmartFarming.Icon.HarvestNow.Desc>
+	<SmartFarming.Icon.AllowHarvest>Allow harvest</SmartFarming.Icon.AllowHarvest>
+	<SmartFarming.Icon.AllowHarvest.Desc>Turn this off to forbid pawns from harvesting this zone.</SmartFarming.Icon.AllowHarvest.Desc>
 	
 	<SmartFarming.Icon.Low>Low</SmartFarming.Icon.Low>
 	<SmartFarming.Icon.Normal>Normal</SmartFarming.Icon.Normal>
@@ -24,6 +26,9 @@
 	<SmartFarming.Settings.ColdSowing>Allow cold sowing</SmartFarming.Settings.ColdSowing>
 	<SmartFarming.Settings.ColdSowing.Desc>Normally, the game does not allow sowing when the ground is frozen, even if the type of plant being sown tolerates freezing temperatures. Disable this to maintain vanilla rules.</SmartFarming.Settings.ColdSowing.Desc>
 	
+	<SmartFarming.Settings.AllowHarvest>Allow harvest gizmo</SmartFarming.Settings.AllowHarvest>
+	<SmartFarming.Settings.AllowHarvest.Desc>Show the "allow harvest" gizmo. You can turn this off if you want to reduce gizmo clutter.</SmartFarming.Settings.AllowHarvest.Desc>
+	
 	<SmartFarming.Settings.SmartSowLabel>Smart sow:</SmartFarming.Settings.SmartSowLabel>
 	<SmartFarming.Settings.ProcessedFoodLabel>Processed food factor:</SmartFarming.Settings.ProcessedFoodLabel>
 	
@@ -35,6 +40,10 @@
 	
 	<SmartFarming.Settings.AutoCutBlighted>Automatically designate blighted crops for disposal</SmartFarming.Settings.AutoCutBlighted>
 	<SmartFarming.Settings.AutoCutBlighted.Desc>If a crop becomes blighted, a cut work order will automatically be designated.</SmartFarming.Settings.AutoCutBlighted.Desc>
+	
+	<SmartFarming.Settings.AutoHarvestNow>Harvest early if threatened</SmartFarming.Settings.AutoHarvestNow>
+	<SmartFarming.Settings.AutoHarvestNow.Desc>If tonight's weather is going to be deadly cold, designate all plants for an immediate harvest.</SmartFarming.Settings.AutoHarvestNow.Desc>
+	<SmartFarming.Message.AutoHarvestNow>Plants desiginated for an early harvest due tonight's forecasted weather.</SmartFarming.Message.AutoHarvestNow>
 	
 	<SmartFarming.Settings.AutoCutDying>Automatically try to harvest dying crops</SmartFarming.Settings.AutoCutDying>
 	<SmartFarming.Settings.AutoCutDying.Desc>If a crop dies to the cold, try to automatically harvest any surviving crops before it's too late.</SmartFarming.Settings.AutoCutDying.Desc>
