--- a/Languages/English/Keyed/owlchemist.smartfarming.xml
+++ b/Languages/English/Keyed/owlchemist.smartfarming.xml
@@ -27,7 +27,7 @@
 	<SmartFarming.Settings.ColdSowing.Desc>Normally, the game does not allow sowing when the ground is frozen, even if the type of plant being sown tolerates freezing temperatures. Disable this to maintain vanilla rules.</SmartFarming.Settings.ColdSowing.Desc>
 	
 	<SmartFarming.Settings.AllowHarvest>Allow harvest gizmo</SmartFarming.Settings.AllowHarvest>
-	<SmartFarming.Settings.AllowHarvest.Desc>Show the "allow harvest" gizmo. You can turn this off if you want to reduce gizmo clutter.</SmartFarming.Settings.AllowHarvest.Desc>
+	<SmartFarming.Settings.AllowHarvest.Desc>Show the "allow harvest" gizmo. Enabling this may have some performance impact for high population colonies with many crop workers. Changing this requires a game restart.</SmartFarming.Settings.AllowHarvest.Desc>
 	
 	<SmartFarming.Settings.SmartSowLabel>Smart sow:</SmartFarming.Settings.SmartSowLabel>
 	<SmartFarming.Settings.ProcessedFoodLabel>Processed food factor:</SmartFarming.Settings.ProcessedFoodLabel>
@@ -46,9 +46,9 @@
 	<SmartFarming.Message.AutoHarvestNow>Plants desiginated for an early harvest due tonight's forecasted weather.</SmartFarming.Message.AutoHarvestNow>
 	
 	<SmartFarming.Settings.AutoCutDying>Automatically try to harvest dying crops</SmartFarming.Settings.AutoCutDying>
-	<SmartFarming.Settings.AutoCutDying.Desc>If a crop dies to the cold, try to automatically harvest any surviving crops before it's too late.</SmartFarming.Settings.AutoCutDying.Desc>
+	<SmartFarming.Settings.AutoCutDying.Desc>If a crop dies to the cold, try to automatically harvest any surviving crops before it's too late. Changing this requires a game restart.</SmartFarming.Settings.AutoCutDying.Desc>
 	
-	<SmartFarming.Settings.ProcessedFood.Desc>When grow zones give an estimated potential nutrition yield, it multiplies the raw food's nutrition by this value. For example a Simple Meal multiplies the value by 1.8x.</SmartFarming.Settings.ProcessedFood.Desc>
+	<SmartFarming.Settings.ProcessedFood.Desc>When grow zones give an estimated potential nutrition yield, it multiplies the raw food's nutrition by this value. For reference, a Simple Meal multiplies the value by 1.8, Fine Meals by 1.2, and Lavish Meals by 1.0.</SmartFarming.Settings.ProcessedFood.Desc>
 	
 	<SmartFarming.Settings.MinTempSlider>Minimum temperature allowance (Mod default: {0}, Min: {1}, Max: {2}): </SmartFarming.Settings.MinTempSlider>
 	<SmartFarming.Settings.MinTemp>When predicting the weather of the earliest harvest day, consider anything below this temperature unacceptable. Plants can potentially die at 0C, but can usually survive if it's only barely freezing for a few hours. However, random daily temperatre deviation may reduce accuracy.</SmartFarming.Settings.MinTemp>
